# qmk-hid-host

./: .eslintrc.js  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  flake.nix  install-build-deps.sh  lefthook.yml  package-lock.json  package.json  tsconfig.json  xkblayout-state
.github/workflows/: pre-release.yml  test.yml
adapters/QMK.HID.Host.Adapter.Windows/: .editorconfig  .gitignore  AppSettings.cs  HidHostClient.cs  Program.cs  QMK.HID.Host.Adapter.Windows.csproj  QMK.HID.Host.Adapter.Windows.sln  appsettings.json  publish.bat
adapters/QMK.HID.Host.Adapter.Windows/Providers/: IProvider.cs  LayoutProvider.cs  MediaProvider.cs  ProviderBase.cs  VolumeProvider.cs
adapters/QMK.HID.Host.Adapter.Windows/Providers/Helpers/: Audio.cs  Layout.cs
server/: .eslintrc.js  .gitignore  .prettierrc.js  package-lock.json  package.json  tsconfig.json
server/src/: config.json  config.ts  dataTypes.ts  hidKeyboard.ts  index.ts
server/src/providers/: layoutProvider.ts  mediaArtistProvider.ts  mediaTitleProvider.ts  providerBase.ts  systemInfoProvider.ts  timeProvider.ts  volumeProvider.ts
src/: config.rs  dataType.rs  data_type.rs  hidKeyboard.rs  keyboard.rs  main.rs  providers.rs  utils.rs
src/providers/: _base.rs  layout.rs  media.rs  relay.rs  time.rs  volume.rs  weather.rs
src/providers/layout/: linux.rs  macos.rs  windows.rs
src/providers/media/: linux.rs  macos.rs  windows.rs
src/providers/volume/: linux.rs  macos.rs  windows.rs
src/utils/: print_hids.rs
