[package]
name = "qmk-hid-host"
version = "0.0.0"
edition = "2021"
authors = ["zzeneg"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
silent = []

[dependencies]
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
chrono = "0.4.26"
hidapi = "2.4.0"
tokio = { version = "1.29.1", features = ["sync"] }
async-std = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
pulsectl-rs = "0.3.2"
libpulse-binding = "2.28.1"
breadx = "3.1.0"
x11 = "2.21.0"
mpris = "2.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
[dependencies.windows]
version = "0.48"
features = [
    "implement",
    "Foundation",
    "Media_Control",
    "Win32_Globalization",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]
