[package]
name = "qmk-hid-host"
version = "0.0.0"
edition = "2021"
authors = ["zzeneg"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
silent = []

[dependencies]
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
chrono = "0.4.26"
hidapi = "2.4.0"
tokio = { version = "1.29.1", features = ["full"] }
async-std = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
pulsectl-rs = "0.3.2"
libpulse-binding = "2.28.1"
x11 = "2.21.0"
mpris = "2.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8.7"
libc = "0.2"
objc2 = {version = "0.5.2", features = ["default"]}
objc2-foundation = { version = "0.2.2", features = ["all"] }
block2 = "0.5.1"
coreaudio-sys = "0.2.16"
coreaudio-rs = "0.12.1"

[target.'cfg(target_os = "windows")'.dependencies]
[dependencies.windows]
version = "0.56"
features = [
    "implement",
    "Foundation",
    "Media_Control",
    "Win32_Globalization",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]
[dependencies.windows-core]
version = "0.56"
